gccida/g0/get_insn_template
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_insn_template/src/final.c:2256:54: error: use of undeclared identifier 'insn_data_0'
output = ( __int64 (  *)(  struct recog_data *, rtx))insn_data_0[code].output; 
                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_insn_template/src/final.c:2257:17: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
output_format = insn_data_0[code].output_format; 
                ^~~~~~~~~~~
                insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_insn_template/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_insn_template/src/final.c:2262:32: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return ( const char *)output( &recog_data_0, insn); 
                               ^~~~~~~~~~~~
                               recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_insn_template/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_insn_template/src/final.c:2270:23: error: use of undeclared identifier 'insn_data_0'
return ( const char *)insn_data_0[code].output; 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_insn_template/src/obj/final.o] Error 1
